# passh-agent

./: Cargo.toml  README.md
extra/: passh-agent.service
src/: config.rs  key_handling.rs  main.rs  pass.rs
tests/: config.toml
tests/config/: incomplete_fields.toml  invalid_toml.toml  nested_sections.toml  proper_config.toml  unneeded_fields.toml  wrong_datatypes.toml
