[package]
name = "passh-agent"
version = "0.2.0"
description = "An ssh-agent implementation to fetch your SSH keys from Pass."
homepage = "https://github.com/MrPixelized/passh-agent"
repository = "https://github.com/MrPixelized/passh-agent"
license = "GPL-3"
authors = ["Ischa Abraham <contact@ischa.dev>"]
edition = "2018"

[dependencies]
ssh-agent = "<= 0.2.2"
toml = "0.5"
openssl = "0.10"
base64 = "0.13"
byteorder = "1.3"
dirs = "3.0"
